--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "^4.0.0",
     "commander": "^10.0.0",
     "dayjs": "^1.11.7",
+    "download-git-repo": "^3.0.2",
     "figlet": "^1.5.2",
     "fs-extra": "^11.1.0",
     "inquirer": "^8.0.0",
